--- a/Module_1.ipynb
+++ b/Module_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMeqr3hAfi4eEeCUGAHDtZu",
+      "authorship_tag": "ABX9TyO9Ov4AQRLPCAj3N9k2SU2J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,20 +114,6 @@
         "  else: print(\"This array is linearly dependent\")"
       ],
       "metadata": {
-        "id": "xf1a6jO4T4X-"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def isLinearIndependent(A):\n",
-        "  colunm_count = A.shape[1]\n",
-        "  if(np.linalg.matrix_rank(A) == colunm_count): print(\"This array is linearly independent \")\n",
-        "  else: print(\"This array is linearly dependent\")"
-      ],
-      "metadata": {
         "id": "X1sX6SLaV9dS"
       },
       "execution_count": null,
@@ -146,29 +132,50 @@
         "isLinearIndependent(A)\n",
         "#This makes sense because for example we can form a linear combination equal to the second column\n",
         "t = np.array_equal((A[0] * 2 + A[1] * 0 ) , A[1])\n",
-        "print(t)\n",
-        "I = np.identity(3)\n",
-        "# 1 0 0\n",
-        "# 0 1 0\n",
-        "# 0 0 1\n",
-        "#The identiy matrix is linearly independent because the columns cannot equal each other\n",
-        "isLinearIndependent(I)\n"
+        "print(t)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uGscANDeS0LM",
-        "outputId": "c8c495ec-75db-4a4b-e24d-e9ff90b431c9"
+        "outputId": "92d7fb7b-4698-4ba3-fe75-a9feb7bf5ded"
       },
-      "execution_count": null,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "This array is linearly dependent\n",
-            "True\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "I = np.identity(3)\n",
+        "# 1 0 0\n",
+        "# 0 1 0\n",
+        "# 0 0 1\n",
+        "#The identiy matrix is linearly independent because the columns cannot equal each other\n",
+        "isLinearIndependent(I)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mAMcpirSkFqa",
+        "outputId": "14a4f1d9-6ed3-4a65-b51e-2db03e8b1385"
+      },
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "This array is linearly independent \n"
           ]
         }
@@ -368,6 +375,8 @@
         "\n",
         "\n",
         "### Constrained Optimization\n",
+        "This is useful for optimization problems.\n",
+        "\n",
         "Let $A$ be a $n$ $x$ $n$ matrix with an orthogonal diagonilzation of $P$$DP^{-1}$\n",
         "The columns of P are orthonromal eigenvectors. The diagonal of $D$ are arranged so that $\\lambda_1 \\le \\lambda_2 \\le ... \\lambda_n$\n",
         "\n",
