--- a/Module_1_3.ipynb
+++ b/Module_1_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOnUrz1flLJAUzqNQ2z5z2b",
+      "authorship_tag": "ABX9TyM2dhlEoQNF3Ca071johPST",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,10 +74,7 @@
         "m, n = 4, 3  # m rows, n columns\n",
         "A = np.random.rand(m, n)\n",
         "print_matrix(A, \"Original matrix A\")\n",
-        "Q, R = np.linalg.qr(A)\n",
-        "\n",
-        "\n",
-        "\n"
+        "Q, R = np.linalg.qr(A)"
       ],
       "metadata": {
         "colab": {
@@ -260,7 +257,6 @@
         "print_matrix(R, \"R matrix\")\n",
         "\n",
         "\n",
-        "# Solve Rx = Q.T @ b\n",
         "Q_T_b = Q.T @ b\n",
         "solution = np.linalg.solve(R, Q_T_b)\n",
         "\n",
@@ -268,11 +264,11 @@
         "print(solution)\n",
         "\n",
         "\n",
-        "# Plot the results\n",
+        "# Plot the results with matplot\n",
         "plt.figure(figsize=(10, 6))\n",
         "plt.scatter(x, b, color='blue', label='Original data')\n",
         "\n",
-        "# Generate points for the fitted line\n",
+        "# Generate points for the fitted line on the plot\n",
         "x_line = np.linspace(0, 6, 100)\n",
         "y_line = solution[0] * x_line + solution[1]\n",
         "plt.plot(x_line, y_line, color='red', label='Least squares fit')\n",
@@ -284,14 +280,14 @@
         "plt.grid(True)\n",
         "plt.show()\n",
         "\n",
-        "# Print the equation of the fitted line\n",
+        "# Print the equation of the fitted line on the plot\n",
         "m, c = solution\n",
         "print(f\"\\nFitted line equation: y = {m:.4f}x + {c:.4f}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 741
+          "height": 1000
         },
         "id": "vn32Gc7B2Dqr",
         "outputId": "85acb1b4-191e-47af-c8f7-3f92baef7544"
@@ -396,7 +392,7 @@
         "X_new_b = np.c_[np.ones((2, 1)), X_new]\n",
         "y_predict = X_new_b.dot(solution)\n",
         "\n",
-        "# Plot the results\n",
+        "# Plot the results with matplot\n",
         "plt.scatter(X, y, color='b', label='Data points')\n",
         "plt.plot(X_new, y_predict, color='r', label='Linear Regression')\n",
         "plt.xlabel('X')\n",
@@ -408,9 +404,10 @@
         "# Calculate R-squared\n",
         "y_pred = X_b.dot(solution)\n",
         "ss_total = np.sum((y - np.mean(y))**2)\n",
+        "#Essentially we use the resiudals to determine the R^2\n",
         "ss_residual = np.sum((y - y_pred)**2)\n",
         "r_squared = 1 - (ss_residual / ss_total)\n",
-        "#Since the R^2 is 9.97 which is close to 1, then the model is a very good fit\n",
+        "#Since the R^2 is around 9.96 which is close to 1, then the model is a very good fit\n",
         "print(f\"R-squared: {r_squared:.4f}\")"
       ],
       "metadata": {
