--- a/Module_1_4.ipynb
+++ b/Module_1_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNBAePnNLV12rrcIRU4ykOD",
+      "authorship_tag": "ABX9TyMKklviEYj6ulQZwlE2Qt7X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,20 @@
         "\n",
         "$Σ$ is  $m × n$ with a non-negative real numbers called singular values on the diagonal.\n",
         "\n",
-        "$V^T$ is the transpose of an $n × n$ orthogonal matrix $V$ where the columns of $V$ are the right singular vectors of $A$."
+        "$V^T$ is the transpose of an $n × n$ orthogonal matrix $V$ where the columns of $V$ are the right singular vectors of $A$.\n",
+        "\n",
+        "To compute the SVD of matrix $A$\n",
+        "\n",
+        "First\n",
+        "\n",
+        "\n",
+        "1.   Compute $A^TA$ and $AA^T$\n",
+        "2.   Compute the eigenvectors of $A^TA$ and $AA^T$\n",
+        "3.   The eigenvectors of $A^TA$ give V\n",
+        "4.   The eigenvectors of $AA^T$ give U\n",
+        "5.   Σ is formed from the squared roots of the eigen values of $A^TA$, then these values are placed along the diagonal of $Σ$.\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "13Nmk7_mhml8"
