--- a/Module_2_3.ipynb
+++ b/Module_2_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOzROderZF6b5QHGjqx67F2",
+      "authorship_tag": "ABX9TyNsUSpHW2fxLOoeM5BbvBBM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,13 @@
         "\n",
         "This gives the probabilty that two or more random variables take on specific values simultaneously. It describes the likelihood of different combinations of outcomes for those variables.\n",
         "\n",
-        "If $X$ and $Y$ are discrete random variables then the joint probability mass function is given by $P(X = x, Y = y) = p(x,y)$ This function takes the probability that $X$ has the value $x$ and Y has the value $y$ simultaneously.\n"
+        "If $X$ and $Y$ are discrete random variables then the joint probability mass function is given by $P(X = x, Y = y) = p(x,y)$ This function takes the probability that $X$ has the value $x$ and Y has the value $y$ simultaneously.\n",
+        "\n",
+        "For the case of only two random variables its called  bivariate distribution, however this concept can be applied to any number of random variables giving a multivariate distribution.\n",
+        "\n",
+        "The joint probability distribution can also be used to find the marginal distribution which is essentially the distribution of one of the variables, and the conditional distribution.\n",
+        "\n",
+        "There can also be a case of a mixed joint density function where one random variable is continuous and the other is discrete.\n"
       ],
       "metadata": {
         "id": "aHTPx0_SLE0W"
@@ -85,7 +91,18 @@
         "\n",
         "For example, flipping two coins is independent because the first coin flip does not affect the second one.\n",
         "\n",
-        "Correlation a type of dependence that is linear. Therefore, any two variables that are correlated are dependent. An example of correlation could be the height and weight of people, where as the height increases, the weight does as well.\n"
+        "**Correlation** a type of dependence that is linear. Therefore, any two variables that are correlated are dependent. An example of correlation could be the height and weight of people, where as the height increases, the weight does as well. Correlation is also related to covariance which is shown below.\n",
+        "\n",
+        "**Covariance** is the measure of the relationship between random variables.\n",
+        "For two random variables it can be calculated like so:\n",
+        "\n",
+        "$\\sigma_{XY} = E[(X - \\mu_x)(Y - \\mu_y)]$\n",
+        "\n",
+        "The correlation between random variable $X$ and $Y$ is shown as\n",
+        "\n",
+        "$ρ_{XY} = \\frac{cov(X,Y)}{\\sqrt{V(X)V(Y)}} = \\frac{ \\sigma_{XY}}{\\sigma_X\\sigma_Y}$\n",
+        "\n",
+        "The results form this can be used to determine the linear relationship between variables. If $\\rho_{XY} = +1$ or $-1$ then the probability distribution exists linearliy, if  $\\rho_{XY} = 0$ then there is a non-linear relationship."
       ],
       "metadata": {
         "id": "tewe_V8_LGDs"
