--- a/Module_2_3.ipynb
+++ b/Module_2_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNsUSpHW2fxLOoeM5BbvBBM",
+      "authorship_tag": "ABX9TyMDLVZ35m8YLglSFag6XoPG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,26 @@
         "For the case of only two random variables its called  bivariate distribution, however this concept can be applied to any number of random variables giving a multivariate distribution.\n",
         "\n",
         "The joint probability distribution can also be used to find the marginal distribution which is essentially the distribution of one of the variables, and the conditional distribution.\n",
+        "\n",
+        "### Marginal Distribution\n",
+        "\n",
+        "For our two discrete random variable above, we can use the marginal probability to determine\n",
+        "$P(X = x) = ∑_yP(X = x, Y= y)$\n",
+        "\n",
+        "For the case of continuous variables this also works:\n",
+        "\n",
+        "$f_X(x) = ∫_{-∞}^∞f(x,y)dy$\n",
+        "\n",
+        "### Conditional Probability\n",
+        "\n",
+        "For our two discrete random variable above, we can use the conditional probability to determine\n",
+        "\n",
+        "$P(X = x | Y = y) = \\frac{P(X = x, Y = y)}{P(Y = y)}$\n",
+        "\n",
+        "\n",
+        "For the case of continuous variables this also works:\n",
+        "\n",
+        "$f(x | y) = \\frac{f(x,y)}{f_Y(y)}$\n",
         "\n",
         "There can also be a case of a mixed joint density function where one random variable is continuous and the other is discrete.\n"
       ],
