--- a/Module_2_4.ipynb
+++ b/Module_2_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPsWmKQ5B6J1yEX5MO1HIaw",
+      "authorship_tag": "ABX9TyORIodJ8h/SxBOr1YhMLZcE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,9 @@
         "\n",
         "The likelihood function $L(θ)$ represents the probability of observing a given set of of data as a function of the parameters $\\theta$ of the underlying probility distribution. Its the **joint probability** of observing the entire sample.\n",
         "\n",
-        "Essentially, the MLE is sued to derive the parameters of a probability distribution.\n",
+        "Essentially, the MLE is used to derive the parameters of a probability distribution.\n",
+        "\n",
+        "If the MLE cannount be found easily then it can also be found using numerical methods like gradient descent.\n",
         "\n",
         "Steps to find the MLE for random samples\n",
         "\n",
