--- a/Module_2_4.ipynb
+++ b/Module_2_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyORIodJ8h/SxBOr1YhMLZcE",
+      "authorship_tag": "ABX9TyP7W9sLGZgRLchmKTshMkYd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -116,13 +116,124 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "The PMF for a binomial distribution is\n",
+        "\n",
+        "$P(X = k |n,p) = (^n_k)p^k(1-p)^{n-k}$\n",
+        "\n",
+        "Sp the likelihood function is the product of those probabilities\n",
+        "\n",
+        "$L(n,p) = ∏_{i=1}^N(^n_{x_i})p^{x_i}(1-p)^{n-{x_i}}$\n",
+        "\n",
+        "We can then take the logarithm of the liklihood to find the log-likelihood\n",
+        "\n",
+        "$ℓ(n,p)=\\sum_{i=1}^N\\log(^n_{x_i}) + {x_i}\\log(p) + (n-x_i)\\log(1-p)$"
+      ],
       "metadata": {
-        "id": "wAzQF2H_Igu3"
+        "id": "1q1qGfs5ZChW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def negative_log_likelihood(params, data):\n",
+        "    # Parameters to optimize\n",
+        "    n_trials = int(np.round(params[0]))  # Ensure n_trials is an integer\n",
+        "    p_success = params[1]\n",
+        "\n",
+        "    # Check that the probability is in the valid range\n",
+        "    if p_success <= 0 or p_success >= 1 or n_trials <= 0:\n",
+        "        return np.inf\n",
+        "\n",
+        "    # Calculate the negative log-likelihood\n",
+        "    log_likelihood = np.sum(stats.binom.logpmf(data, n_trials, p_success))\n",
+        "\n",
+        "    return -log_likelihood  # We minimize, so return the negative"
+      ],
+      "metadata": {
+        "id": "3eDthdlDaMZc"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import scipy.stats as stats\n",
+        "from scipy.optimize import minimize\n",
+        "\n",
+        "# Function to calculate the negative log-likelihood for binomial distribution given n_trials\n",
+        "def negative_log_likelihood_fixed_n(p_success, n_trials, data):\n",
+        "\n",
+        "    # Calculate the log-likelihood\n",
+        "    log_likelihood = np.sum(stats.binom.logpmf(data, n_trials, p_success))\n",
+        "    # We then make it negative so that we can find the minimum\n",
+        "    return -log_likelihood\n",
+        "\n",
+        "# Parameters for the binomial distributin\n",
+        "n_true = 20\n",
+        "p_true = 0.6\n",
+        "\n",
+        "# Create the binomial distribution data\n",
+        "data = np.random.binomial(n_true, p_true, 1000)\n",
+        "\n",
+        "# Grid search approach to find the best n_trials by minimizing the negative log-likelihood\n",
+        "best_n = None\n",
+        "best_p = None\n",
+        "best_log_likelihood = np.inf\n",
+        "\n",
+        "n_range = range(1, 50)  # Possible values for n_trials (1 to 100)\n",
+        "\n",
+        "#We are essentially trying all n_trial amounts in this range to determine the most likely\n",
+        "#n_trials and success\n",
+        "\n",
+        "for n_trials in n_range:\n",
+        "    # Use optimization for p_success with current n_trials\n",
+        "    #First we give our func, then an inital guesss, then the additional args, we also bound our guess as its a probability\n",
+        "    result = minimize(negative_log_likelihood_fixed_n, 0.5, args=(n_trials, data), bounds=[(0.01, 0.99)])\n",
+        "    if(result.success == False):\n",
+        "      continue\n",
+        "    # print(result.x,result.fun)\n",
+        "    p_estimated = result.x[0]\n",
+        "\n",
+        "    # Get the negative log-likelihood for this (n_trials, p_success) pair\n",
+        "    current_log_likelihood = result.fun\n",
+        "\n",
+        "    # Check if this is the best (lowest) log-likelihood found so far\n",
+        "    if current_log_likelihood < best_log_likelihood:\n",
+        "        best_n = n_trials\n",
+        "        best_p = p_estimated\n",
+        "        best_log_likelihood = current_log_likelihood\n",
+        "\n",
+        "# Print the estimated values\n",
+        "print(f\"Estimated n_trials: {best_n}\")\n",
+        "print(f\"Estimated p_success: {best_p:.4f}\")\n",
+        "# Print the actual values for comparison\n",
+        "print(f\"Actual n_trials: {n_true}\")\n",
+        "print(f\"Actual p_success: {p_true}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U3luwDG9Yxz1",
+        "outputId": "d93a1886-a81f-4fd9-ab47-0f0377fe2f41"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Estimated n_trials: 20\n",
+            "Estimated p_success: 0.6004\n",
+            "Actual n_trials: 20\n",
+            "Actual p_success: 0.6\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
