--- a/Module_3_7.ipynb
+++ b/Module_3_7.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOQqda3DD88ump+64ikdkhq",
+      "authorship_tag": "ABX9TyO9814skJwEP5cMStvMw8Kr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,20 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Gnome101/MAT_422/blob/main/Module_3_7.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 3.7 Neural Networks\n",
+        "\n",
+        "A neural network is a computational model inspired by the structure of the human brain. It consists of interconnected nodes (neurons) organized into layers that work together to recognize patterns and solve complex problems.\n",
+        "\n",
+        "Its applications include image recognition, language translation, and predicitons.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "QlN6XF4o-qaN"
+      }
     },
     {
       "cell_type": "markdown",
@@ -62,12 +76,14 @@
       "cell_type": "markdown",
       "source": [
         "# 3.7.3. Cost function\n",
-        "This quantifies the error between the networks predictions and the actual outputs. The goal is to minimize the function to improve the network's accuracy.\n",
+        "This quantifies the error between the networks predictions and the actual outputs. The goal is to minimize the function to improve the network's accuracy. The smaller the value of the cost function, then the better the network's predictions align with the actual data.\n",
         "\n",
         "### Mean Squared Error\n",
         "This is a common cost function which squares the difference between the predicted and actual values\n",
         "### Cross-Entropy Loss\n",
-        "This measures the difference between the predicted and true probability distributions\n"
+        "This measures the difference between the predicted and true probability distributions\n",
+        "\n",
+        "During backpropagation, the gradient is calculated for the cost function to find out how to adjust each weight to best minimize the cost function."
       ],
       "metadata": {
         "id": "ZkXFxsMYwlXj"
@@ -77,7 +93,7 @@
       "cell_type": "markdown",
       "source": [
         "# 3.7.4. Backpropagation\n",
-        "This is the process of calculating the gradient of the cost function with respect to each weight in the network, enabling efficent weight updates. We can use the derivative of the activation function for the gradient."
+        "This is the process of calculating the gradient of the cost function with respect to each weight in the network, enabling efficent weight updates.  Through the chain rule, backpropagation works layer by layer from the output layer to the input layer, adjusting weights to reduce error. This process ensures the network learns by minimizing the cost function, which helps to improve its results."
       ],
       "metadata": {
         "id": "p5oztnL9wlZd"
@@ -94,7 +110,9 @@
         "*   Foward Pass - calculate the network output for a given input\n",
         "*   Calculate error - compute the cost function\n",
         "*   Backward Pass - calculate the gradient for each of the layer's weights\n",
-        "*   Update weights - adjust the weights based on the gradient and a learning rate"
+        "*   Update weights - adjust the weights based on the gradient and a learning rate\n",
+        "\n",
+        "These steps are then repeated over mutiple epochs which helps to reduce the overall networks error which optimizes the networks preformance."
       ],
       "metadata": {
         "id": "pyOKsTx2wlbp"
