--- a/Module_3_7.ipynb
+++ b/Module_3_7.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9814skJwEP5cMStvMw8Kr",
+      "authorship_tag": "ABX9TyOF8w/A4uG7X9510Ghsn+X8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -154,7 +154,7 @@
         "\n",
         "input_layer_neurons = inputs.shape[1]  # Number of input features\n",
         "hidden_layer_neurons = 4               # Number of hidden neurons in our hidden layer\n",
-        "output_neurons = 1                      # Number of output neurons(only one input bit)\n",
+        "output_neurons = 1                      #  Number of output neurons(only one input bit)\n",
         "\n",
         "# Weights\n",
         "weights_input_hidden = np.random.uniform(size=(input_layer_neurons, hidden_layer_neurons)) # weights are made randomly\n",
@@ -163,7 +163,6 @@
         "bias_hidden = np.random.uniform(size=(1, hidden_layer_neurons))\n",
         "bias_output = np.random.uniform(size=(1, output_neurons))\n",
         "\n",
-        "# Set learning rate and number of epochs\n",
         "learning_rate = 0.2 # modifies how fast it learns or changes\n",
         "epochs = 10000\n",
         "errors = []\n",
@@ -192,10 +191,9 @@
         "    weights_input_hidden += inputs.T.dot(d_hidden_layer) * learning_rate\n",
         "    bias_hidden += np.sum(d_hidden_layer, axis=0, keepdims=True) * learning_rate\n",
         "\n",
-        "# Plot the error over epochs\n",
         "plt.figure(figsize=(12, 5))\n",
         "\n",
-        "# Plot the training loss\n",
+        "# Plot the training loss - notice how the model improves epoch after epoch\n",
         "plt.subplot(1, 2, 1)\n",
         "plt.plot(errors)\n",
         "plt.title(\"Training Loss Over Epochs\")\n",
